...
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_content_description"
                app:srcCompat="@drawable/appauth_96dp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="OIDC" />

            <TextView
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign In"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/sign_in_native"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign In Native"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/get_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Get Profile"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

...
                    android:layout_height="wrap_content"
                    android:text="Refresh Token"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/clear_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Clear Data"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Revoke refresh token"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/revoke_access"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Revoke access token"
                    tools:ignore="HardcodedText" />

                <Button
...
